# morning-intelligence-butler

./: .gitignore  CHANGELOG.md  INPUT_SCHEMA.md  LICENSE  README.md  RELEASE.md  TROUBLESHOOTING.md  morning_butler.py  pyproject.toml  sample_report.json
.github/workflows/: ci.yml
scripts/: __init__.py  release_check.py  smoke_test.py
src/: __init__.py  main.py
tests/: test_main.py  test_smoke_test_script.py
