[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morning-intelligence-butler"
dynamic = ["version"]
description = "A morning briefing assistant for news, important mail, and safe inbox cleanup"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "love19870821"}]
keywords = ["morning", "briefing", "gmail", "news", "automation", "telegram"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.scripts]
morning-butler = "src.main:main"
morning-butler-smoke = "scripts.smoke_test:main"
morning-butler-release-check = "scripts.release_check:main"

[project.urls]
Homepage = "https://github.com/love19870821/morning-intelligence-butler"
Repository = "https://github.com/love19870821/morning-intelligence-butler.git"
Issues = "https://github.com/love19870821/morning-intelligence-butler/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["scripts"]
py-modules = ["src.main", "morning_butler"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}
