[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morning-intelligence-butler"
dynamic = ["version"]
description = "A Traditional Chinese morning briefing assistant for news, Gmail triage, live market prices, and follow-up items"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "love19870821"}]
license-files = ["LICENSE"]
keywords = ["morning", "briefing", "gmail", "news", "automation", "telegram", "market", "follow-up", "traditional-chinese"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Office/Business",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.scripts]
morning-butler = "src.main:main"
morning-butler-smoke = "scripts.smoke_test:main"
morning-butler-release-check = "scripts.release_check:main"

[project.urls]
Homepage = "https://github.com/love19870821/morning-intelligence-butler"
Repository = "https://github.com/love19870821/morning-intelligence-butler.git"
Issues = "https://github.com/love19870821/morning-intelligence-butler/issues"
Changelog = "https://github.com/love19870821/morning-intelligence-butler/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["scripts"]
py-modules = ["src.main", "morning_butler"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}
